/**
 * Created by IntelliJ IDEA.
 * User: Anton
 * Date: 21.01.2021
 * Time: 3:33
 * To change this template use File | Settings | File and Code Templates.
 */
public abstract class Shape2d implements Squarable{

public abstract void loadDimensions();

}
