/**
 * Created by IntelliJ IDEA.
 * User: Anton
 * Date: 21.01.2021
 * Time: 16:52
 * To change this template use File | Settings | File and Code Templates.
 */
public interface Squarable {
    double calculateSquare();
}
