@startuml

title __SRC's Class Diagram__\n

  namespace  {
    class Circle {
        - r : double
        + calculateSquare()
        + loadDimensions()
    }
  }
  

  namespace  {
    class Main {
        {static} + scanner : Scanner
        {static} + main()
    }
  }
  

  namespace  {
    class Rectangle {
        - a : double
        - b : double
        + calculateSquare()
        + loadDimensions()
    }
  }
  

  namespace  {
    abstract class Shape2d {
        {abstract} + loadDimensions()
    }
  }
  

  namespace  {
    class ShapeFactory {
        + getInstance()
    }
  }
  

  namespace  {
    enum ShapeType {
      CIRCLE
      RECTANGLE
      TRIANGLE
      UNKNOWN_SHAPE
      name
    }
  }
  

  namespace  {
    interface Squarable {
        {abstract} + calculateSquare()
    }
  }
  

  namespace  {
    class Triangle {
        - a : double
        - b : double
        - c : double
        + calculateSquare()
        + loadDimensions()
    }
  }
  

  Circle -up-|> Shape2d
  Rectangle -up-|> Shape2d
  Shape2d .up.|> Squarable
  Triangle -up-|> Shape2d


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
